<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_operation_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/op_count_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Chronometer
        android:id="@+id/chrono_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_current_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/number_text"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/current_number_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_operation_count" />

    <TextView
        android:id="@+id/tv_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/goal_text"
        android:textSize="@dimen/goal_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_current_number"
        app:layout_constraintStart_toStartOf="@+id/tv_current_number"
        app:layout_constraintTop_toBottomOf="@+id/tv_current_number" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_goal">

        <TextView
            android:id="@+id/tv_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/hint_text"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/hint_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_undo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/undo_text"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/hint_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_hint"
            app:layout_constraintEnd_toStartOf="@+id/tv_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_hint" />

        <TextView
            android:id="@+id/tv_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/retry_text"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/hint_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_hint"
            app:layout_constraintTop_toTopOf="@+id/tv_hint" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <Button
            android:id="@+id/bt_square_root"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorPrimary"
            android:gravity="bottom|center"
            android:paddingBottom="@dimen/padding_bottom_button"
            android:text="@string/square_root_text"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintBottom_toTopOf="@+id/bt_floor"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.5" />

        <Button
            android:id="@+id/bt_factorial"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:background="@color/colorPrimary"
            android:gravity="bottom|center"
            android:paddingBottom="@dimen/padding_bottom_button"
            android:text="@string/factorial_text"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintStart_toEndOf="@+id/bt_square_root"
            app:layout_constraintTop_toTopOf="@+id/bt_square_root"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.5" />

        <Button
            android:id="@+id/bt_floor"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:gravity="bottom|center"
            android:paddingBottom="@dimen/padding_bottom_button"
            android:text="@string/floor_text"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintStart_toStartOf="@+id/bt_square_root"
            app:layout_constraintTop_toBottomOf="@+id/bt_square_root"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.5" />

        <Button
            android:id="@+id/bt_square"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:gravity="bottom|center"
            android:paddingBottom="@dimen/padding_bottom_button"
            android:text="@string/square_text"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintEnd_toEndOf="@+id/bt_factorial"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintTop_toBottomOf="@+id/bt_factorial"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.5" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>